# Screencappa

./: CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  SETUP_INSTRUCTIONS.md  Screencappa  Screencappa.pro  USER_GUIDE.md  build_windows.bat  build_windows.sh  moc_imageprocessor.cpp  moc_screencapture.cpp  package_macos.sh  package_windows.bat  package_windows.sh
build-windows/: Makefile  Makefile.Debug  Makefile.Release  moc_imageprocessor.cpp  moc_screencapture.cpp  uic_wrapper.sh
src/: imageprocessor.cpp  imageprocessor.h  main.cpp  mainwindow.ui  screencapture.cpp  screencapture.h
